Update blufor and redfor

--- a/Configs/Workbench/BatchPrefab/SetFactionBLUFOR.conf
+++ b/Configs/Workbench/BatchPrefab/SetFactionBLUFOR.conf
@@ -6,7 +6,7 @@ SCR_BatchPrefabTemplates {
    m_ComponentAttributesArray {
     SCR_BatchPrefabTemplatesAttributes "{5D6F04ECBA20C15D}" {
      m_AttributeName "faction affiliation"
-     m_AttributeValue "SampleFactionBLUFOR"
+     m_AttributeValue "BOPE"
     }
    }
   }
@@ -16,7 +16,7 @@ SCR_BatchPrefabTemplates {
    m_ComponentAttributesArray {
     SCR_BatchPrefabTemplatesAttributes "{5D6F04EC3E2FDFE1}" {
      m_AttributeName "faction affiliation"
-     m_AttributeValue "SampleFactionBLUFOR"
+     m_AttributeValue "BOPE"
     }
    }
   }
