--- a/Configs/Workbench/EditablePrefabs/EditablePrefabsComponent_EditableEntity.conf
+++ b/Configs/Workbench/EditablePrefabs/EditablePrefabsComponent_EditableEntity.conf
@@ -2,11 +2,11 @@ EditablePrefabsComponent_EditableEntity {
  m_EntityLabelRules {
   EditablePrefabsLabel_Faction "{56D8B909C631167B}" {
    m_Label FACTION_REDFOR
-   m_FactionToCheck "SampleFactionREDFOR"
+   m_FactionToCheck "CV"
   }
   EditablePrefabsLabel_Faction "{56D8B909D77CE78B}" {
    m_Label FACTION_BLUFOR
-   m_FactionToCheck "SampleFactionBLUFOR"
+   m_FactionToCheck "BOPE"
   }
   EditablePrefabsLabel_Faction "{56D8B909D5A71659}" {
    m_Label FACTION_GREENFOR
