--- a/Configs/Factions/SampleFactionREDFOR.conf
+++ b/Configs/Factions/SampleFactionREDFOR.conf
@@ -1,16 +1,16 @@
 SCR_Faction : "{B122E3B10BB3404B}Configs/Factions/OPFOR.conf" {
- FactionKey "SampleFactionREDFOR"
+ FactionKey "CV"
  FactionColor 0.947 0.067 0.067 1
  UIInfo SCR_FactionUIInfo "{569AB9EFA7D2161D}" {
-  Name "Sample New Faction - REDFOR"
-  Icon "{4B82BDAE204F9B47}UI/Textures/Flags/flag_red_ca.edds"
-  m_sNameUpper "SAMPLE NEW FACTION - REDFOR"
+  Name "Comando Vermelho"
+  Icon "{F370894884326C43}Assets/Factions/cv-icon.edds"
+  m_sNameUpper "COMANDO VERMELHO"
  }
  "Identity of soldiers" FactionIdentity "{5714D7ED748A45B1}" : "{FBBCD73926989580}Configs/Identities/FactionIdentity_USSR.conf" {
  }
- m_sFactionFlag "{4B82BDAE204F9B47}UI/Textures/Flags/flag_red_ca.edds"
+ m_sFactionFlag "{9483D1EDF710FA9D}Assets/Factions/flag-cv.edds"
  m_FactionFlagMaterial "{362AC46447DBE58B}Assets/Props/Fabric/Flags/Data/Flag_1_2_Red.emat"
- m_FactionLabel FACTION_REDFOR
+ m_FactionLabel FACTION_NONE
  m_aFriendlyFactionsIds {
   "USSR"
  }
