--- a/Configs/Workbench/EditablePrefabs/EditablePrefabsComponent_EditableEntity.conf
+++ b/Configs/Workbench/EditablePrefabs/EditablePrefabsComponent_EditableEntity.conf
@@ -10,7 +10,7 @@ EditablePrefabsComponent_EditableEntity {
   }
   EditablePrefabsLabel_Faction "{56D8B909D5A71659}" {
    m_Label FACTION_GREENFOR
-   m_FactionToCheck "SampleFactionGREENFOR"
+   m_FactionToCheck "MILICIA"
   }
  }
 }
