--- a/Configs/Factions/SampleFactionGREENFOR.conf
+++ b/Configs/Factions/SampleFactionGREENFOR.conf
@@ -1,9 +1,10 @@
 SCR_Faction : "{277AE7613D88A55B}Configs/Factions/INDFOR.conf" {
- FactionKey "SampleFactionGREENFOR"
+ FactionKey "MILICIA"
  UIInfo SCR_FactionUIInfo "{56A6FC4FF81B3BC7}" {
-  Name "Sample New Faction - GREENFOR"
+  Name "Milicia"
+  Description "Um grupo armado que operam paralelamente ou com o consentimento das forças de segurança do Estado."
   Icon "{CC82BE60819C071E}UI/Textures/Flags/flag_green_ca.edds"
-  m_sNameUpper "SAMPLE NEW FACTION - GREENFOR"
+  m_sNameUpper "MILICIA"
  }
  "Identity of soldiers" FactionIdentity "{5928CC2BC9433DFC}" : "{46413880217C8196}Configs/Identities/FactionIdentity_FIA.conf" {
  }
