atualização da faction campaign

--- a/Configs/Factions/SampleFactionGREENFOR_Campaign.conf
+++ b/Configs/Factions/SampleFactionGREENFOR_Campaign.conf
@@ -1,4 +1,6 @@
 SCR_CampaignFaction : "{EB13E2A026EC25BF}Configs/Factions/SampleFactionGREENFOR.conf" {
+ FactionKey "FIA"
+ m_bIsPlayable 0
  m_sFactionRadioEncryptionKey "freedomSauce"
  m_iFactionRadioFrequency 42000
  m_aRanks {
