--- a/Configs/Factions/SampleFactionBLUFOR_Campaign.conf
+++ b/Configs/Factions/SampleFactionBLUFOR_Campaign.conf
@@ -1,4 +1,7 @@
 SCR_CampaignFaction : "{2F1CD67B16BC0567}Configs/Factions/SampleFactionBLUFOR.conf" {
+ UIInfo SCR_FactionUIInfo "{5928CC2BF0D1B521}" {
+  Name "B.O.P.E."
+ }
  m_aEntityCatalogs {
   SCR_EntityCatalogMultiList "{5C9E82F29B327997}" {
    m_aEntityEntryList {
@@ -14,15 +17,12 @@ SCR_CampaignFaction : "{2F1CD67B16BC0567}Configs/Factions/SampleFactionBLUFOR.co
      m_aEntityDataList {
       SCR_EntityCatalogSpawnerData "{5E48B2F646813529}" {
        m_eSlotTypes VEHICLE_MEDIUM
-       m_eMinimumRequiredRank SERGEANT
-       m_iSupplyCost 420
       }
      }
     }
    }
   }
  }
- m_FactionFlagMaterial "{610803CC3F3D6649}Assets/Props/Fabric/Flags/Data/Flag_1_2_USA.emat"
  m_DefendersGroupPrefab "{D4A1576757665D02}Prefabs/Groups/Campaign/Group_US_Defenders.et"
  m_aStartingVehicles {
   "{3F2AA823B6C65E1E}Prefabs/Vehicles/Wheeled/M923A1/M923A1_transport_MERDC.et"
