--- a/Configs/Factions/SampleFactionGREENFOR.conf
+++ b/Configs/Factions/SampleFactionGREENFOR.conf
@@ -1,5 +1,5 @@
 SCR_Faction : "{277AE7613D88A55B}Configs/Factions/INDFOR.conf" {
- FactionKey "MILICIA"
+ FactionKey "FIA"
  UIInfo SCR_FactionUIInfo "{56A6FC4FF81B3BC7}" {
   Name "Milicia"
   Description "Um grupo armado que operam paralelamente ou com o consentimento das forças de segurança do Estado."
@@ -8,6 +8,7 @@ SCR_Faction : "{277AE7613D88A55B}Configs/Factions/INDFOR.conf" {
  }
  "Identity of soldiers" FactionIdentity "{5928CC2BC9433DFC}" : "{46413880217C8196}Configs/Identities/FactionIdentity_FIA.conf" {
  }
+ m_bIsPlayable 0
  m_sFactionFlag "{CC82BE60819C071E}UI/Textures/Flags/flag_green_ca.edds"
  m_FactionFlagMaterial "{B7A02313829700F9}Assets/Props/Fabric/Flags/Data/Flag_1_2_Green.emat"
  m_FactionLabel FACTION_GREENFOR
