--- a/Configs/Factions/SampleFactionREDFOR_Campaign.conf
+++ b/Configs/Factions/SampleFactionREDFOR_Campaign.conf
@@ -1,5 +1,26 @@
 SCR_CampaignFaction : "{C93D9F19E9F3CD97}Configs/Factions/SampleFactionREDFOR.conf" {
+ FactionKey "CV"
  m_aEntityCatalogs {
+  SCR_EntityCatalogMultiList "{5D32E091B0B3AE63}" {
+   m_aMultiLists {
+    SCR_EntityCatalogMultiListEntry "{5C68AD5F13240031}" {
+     m_aEntities {
+      SCR_EntityCatalogInventoryItem "{5C62F7DF2625FC17}" {
+       m_bEnabled 0
+      }
+      SCR_EntityCatalogInventoryItem "{5C62F7DF27EA2A75}" {
+       m_bEnabled 0
+      }
+      SCR_EntityCatalogInventoryItem "{5C62F7DF38816B2D}" {
+       m_bEnabled 0
+      }
+      SCR_EntityCatalogInventoryItem "{5C62F7DF3862E379}" {
+       m_bEnabled 0
+      }
+     }
+    }
+   }
+  }
   SCR_EntityCatalogMultiList "{5C9E82F285C09E24}" {
    m_aEntityEntryList {
     SCR_EntityCatalogEntry "{5D2348260FAC0091}" {
