--- a/Configs/Factions/SampleFactionGREENFOR_Campaign.conf
+++ b/Configs/Factions/SampleFactionGREENFOR_Campaign.conf
@@ -53,6 +53,7 @@ SCR_CampaignFaction : "{EB13E2A026EC25BF}Configs/Factions/SampleFactionGREENFOR.
   }
  }
  m_DefendersGroupPrefab "{359353A0A5A52216}Prefabs/Groups/Campaign/Group_USSR_Defenders.et"
+ m_MobileHQPrefab "{9CB496688A3BCC3E}Prefabs/MP/Campaign/Assets/CampaignMobileAssemblyWest.et"
  m_RadioPrefab "{54C68E438DD34265}Prefabs/Items/Equipment/Radios/Radio_R107M.et"
- m_BaseBuildingHQ "{85A010184F03C74F}Prefabs/Compositions/Slotted/SlotFlatSmall/Headquarters_S_USSR_01_Campaign.et"
+ m_BaseBuildingHQ "{CD02EBFB0E2E274E}Prefabs/Compositions/Slotted/SlotFlatSmall/Headquarters_S_FIA_01.et"
 }
