update addon name

--- a/Configs/Editor/PlaceableEntities/Characters_SampleFactionBLUFOR.conf
+++ b/Configs/Editor/PlaceableEntities/Characters_SampleFactionBLUFOR.conf
@@ -1,5 +1,5 @@
 SCR_PlaceableEntitiesRegistry {
- m_sAddon "SampleMod_NewFaction"
+ m_sAddon "FactionsRIO"
  m_sSourceDirectory "{5307E2851958D16D}Prefabs/Characters/Factions/BLUFOR"
  m_bExposed 1
  m_Prefabs {
