--- a/Configs/Editor/PlaceableEntities/Characters_SampleFactionGREENFOR.conf
+++ b/Configs/Editor/PlaceableEntities/Characters_SampleFactionGREENFOR.conf
@@ -1,5 +1,5 @@
 SCR_PlaceableEntitiesRegistry {
- m_sAddon "SampleMod_NewFaction"
+ m_sAddon "FactionsRIO"
  m_sSourceDirectory "{2F77881F56A8CCD4}Prefabs/Characters/Factions/INDFOR"
  m_bExposed 1
  m_Prefabs {
