--- a/Configs/Editor/PlaceableEntities/Characters_SampleFactionREDFOR.conf
+++ b/Configs/Editor/PlaceableEntities/Characters_SampleFactionREDFOR.conf
@@ -1,5 +1,5 @@
 SCR_PlaceableEntitiesRegistry {
- m_sAddon "SampleMod_NewFaction"
+ m_sAddon "FactionsRIO"
  m_sSourceDirectory "{169F088F2387E0C5}Prefabs/Characters/Factions/OPFOR"
  m_bExposed 1
  m_Prefabs {
