--- a/Configs/Editor/PlaceableEntities/Systems/Systems_SampleFaction.conf
+++ b/Configs/Editor/PlaceableEntities/Systems/Systems_SampleFaction.conf
@@ -1,5 +1,5 @@
 SCR_PlaceableEntitiesRegistry {
- m_sAddon "SampleMod_NewFaction"
+ m_sAddon "FactionsRIO"
  m_sSourceDirectory "{DCF44154CA43E359}PrefabsEditable/System"
  m_Prefabs {
   "{E33006FB5760C054}PrefabsEditable/SpawnPoints/E_SpawnPoint_REDFOR.et"
