--- a/Configs/Editor/PlaceableEntities/Vehicles_SampleFaction.conf
+++ b/Configs/Editor/PlaceableEntities/Vehicles_SampleFaction.conf
@@ -1,5 +1,5 @@
 SCR_PlaceableEntitiesRegistry {
- m_sAddon "SampleMod_NewFaction"
+ m_sAddon "FactionsRIO"
  m_sSourceDirectory "{F9291FCE0C1F7605}Prefabs/Vehicles"
  m_Prefabs {
   "{AF946468919822C9}Prefabs/Vehicles/Wheeled/UAZ469/UAZ469_SampleFactionREDFOR.et" "{9DD0746FA8A2EE58}Prefabs/Vehicles/Wheeled/Ural4320/Ural4320_SampleFactionREDFOR.et"
