feat: salvando os itens

--- a/Configs/Factions/SampleFactionREDFOR.conf
+++ b/Configs/Factions/SampleFactionREDFOR.conf
@@ -75,6 +75,9 @@ SCR_Faction : "{B122E3B10BB3404B}Configs/Factions/OPFOR.conf" {
    m_aMultiLists {
     SCR_EntityCatalogMultiListEntry "{5C68AD5F7414CA4A}" {
      m_aEntities {
+      SCR_EntityCatalogInventoryItem "{61FB5ACA9BE449FF}" {
+       m_sEntityPrefab "{80E75A71C29190DB}Prefabs/Items/Medicine/Tourniquet_01/Tourniquet_USSR_01.et"
+      }
       SCR_EntityCatalogInventoryItem "{60E6ED10C7C59E3A}" {
        m_sEntityPrefab "{13772C903CB5E4F7}Prefabs/Items/Equipment/Maps/PaperMap_01_folded.et"
        m_aEntityDataList {
@@ -121,6 +124,15 @@ SCR_Faction : "{B122E3B10BB3404B}Configs/Factions/OPFOR.conf" {
          m_iSupplyCost 0
         }
        }
+      }
+      SCR_EntityCatalogInventoryItem "{61FB5ACA638F8B79}" {
+       m_sEntityPrefab "{0D9A5DCF89AE7AA9}Prefabs/Items/Medicine/MorphineInjection_01/MorphineInjection_01.et"
+      }
+      SCR_EntityCatalogInventoryItem "{61FB5ACA6ACFB29F}" {
+       m_sEntityPrefab "{062E2F1D7F6739D6}Prefabs/Items/Equipment/Accessories/ETool_MPL50/ETool_MPL50_FreeRoamBuilding_Gadget.et"
+      }
+      SCR_EntityCatalogInventoryItem "{61FB5ACA7D2B0434}" {
+       m_sEntityPrefab "{98C79F5FAE12F9B6}Prefabs/Weapons/Attachments/Bayonets/Bayonet_6Kh4.et"
       }
      }
     }
@@ -627,6 +639,24 @@ SCR_Faction : "{B122E3B10BB3404B}Configs/Factions/OPFOR.conf" {
          m_iSupplyCost 0
         }
        }
+      }
+      SCR_EntityCatalogInventoryItem "{61FB5ACA341E3419}" {
+       m_sEntityPrefab "{F396524995F06BFA}Prefabs/Characters/Vests/Vest_SRU21P/Vest_SRU21P.et"
+      }
+      SCR_EntityCatalogInventoryItem "{61FB5AC9EA068D26}" {
+       m_sEntityPrefab "{5E17C1AE66A6FF00}Prefabs/Characters/Uniforms/Pants_KZS/Pants_KZS.et"
+      }
+      SCR_EntityCatalogInventoryItem "{61FB5AC98407D753}" {
+       m_sEntityPrefab "{43D84EA05C66258C}Prefabs/Characters/Uniforms/Jacket_Denim_01/Jacket_Denim_01_base.et"
+      }
+      SCR_EntityCatalogInventoryItem "{61FB5AC98EDCB016}" {
+       m_sEntityPrefab "{27162F1F6EE6581A}Prefabs/Characters/Uniforms/Jacket_Denim_01/Jacket_Denim_01_brownShirt.et"
+      }
+      SCR_EntityCatalogInventoryItem "{61FB5AC991EF12F1}" {
+       m_sEntityPrefab "{EB0D74A43F74B522}Prefabs/Characters/Uniforms/Jacket_Denim_01/Jacket_Denim_01_strippedShirt.et"
+      }
+      SCR_EntityCatalogInventoryItem "{61FB5AC9915B86BD}" {
+       m_sEntityPrefab "{23A15812C40D34C2}Prefabs/Characters/Uniforms/Jacket_Denim_01/Jacket_Denim_01_strippedShirt_dirty.et"
       }
      }
     }
