feat: add new uniforms and bope patch

--- a/Configs/Factions/SampleFactionBLUFOR.conf
+++ b/Configs/Factions/SampleFactionBLUFOR.conf
@@ -3958,8 +3958,27 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
     }
     SCR_EntityCatalogMultiListEntry "{5C68AD5F13240031}" {
      m_aEntities {
+      SCR_EntityCatalogInventoryItem "{61FEE78976E1F078}" {
+       m_sEntityPrefab "{9C624FF37082B70A}Prefabs/Characters/Uniforms/Crye_Pants/crye_pants_black.et"
+       m_aEntityDataList {
+        SCR_ArsenalItem "{61FEE79659FE09A5}" {
+         m_eItemType LEGS
+         m_iSupplyCost 1
+        }
+       }
+      }
+      SCR_EntityCatalogInventoryItem "{61FEE78968685879}" {
+       m_sEntityPrefab "{E3CF7D0A9D08022E}Prefabs/Characters/Uniforms/Crye_Shirt/Jacket_Crye_Combat_Shirt_Black.et"
+       m_aEntityDataList {
+        SCR_ArsenalItem "{61FEE7964A8D9697}" {
+         m_eItemType TORSO
+         m_iSupplyCost 0
+        }
+       }
+      }
       SCR_EntityCatalogInventoryItem "{5D4A8E6F2C974466}" {
        m_sEntityPrefab "{1CF302A33F29FBEF}Prefabs/Characters/Uniforms/Jacket_FROG_Combat_Shirt.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5D4A8E6F2C974467}" {
          m_eItemType TORSO
@@ -3969,6 +3988,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{5D4A8E6F2C974469}" {
        m_sEntityPrefab "{76D80043D6BFFB57}Prefabs/Characters/Uniforms/Pants_FROG_Trousers.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5D4A8E6F2C97446A}" {
          m_eItemType LEGS
@@ -3978,6 +3998,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{5DEE383ABFD090D5}" {
        m_sEntityPrefab "{7A31BAAF2D74B8B4}Prefabs/Characters/Uniforms/Jacket_FROG_Combat_Shirt_Arid.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5DEE383AAE88D666}" {
          m_eItemType TORSO
@@ -3987,6 +4008,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{5DEE383ABF11E722}" {
        m_sEntityPrefab "{F6A9C2400BE103E4}Prefabs/Characters/Uniforms/Pants_FROG_Trousers_Arid.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5DEE383AAF6A7B55}" {
          m_eItemType LEGS
@@ -3996,6 +4018,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{6146FD92D16C32C4}" {
        m_sEntityPrefab "{B3123B204D2C0BFD}Prefabs/Characters/Uniforms/Pants_FROG_Trousers_AOR2.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5DEE383AAF6A7B55}" {
          m_eItemType LEGS
@@ -4005,6 +4028,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{5F24F97EF2AC8D91}" {
        m_sEntityPrefab "{7BA7FF3E9F68960E}Prefabs/Characters/Uniforms/Crye_Shirt/Jacket_Crye_Combat_Shirt_MC.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5DEE383AAE88D666}" {
          m_eItemType TORSO
@@ -4014,6 +4038,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{5F24F97E8D7C98D0}" {
        m_sEntityPrefab "{BCC6A98B87FC466A}Prefabs/Characters/Uniforms/Crye_Shirt/Jacket_Crye_Combat_Shirt_MARPAT.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5DEE383AAE88D666}" {
          m_eItemType TORSO
@@ -4023,6 +4048,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{6146FD9480C94296}" {
        m_sEntityPrefab "{10D0A70AB04770B7}Prefabs/Characters/Uniforms/Crye_Shirt/Jacket_Crye_Combat_Shirt_AOR2.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5DEE383AAE88D666}" {
          m_eItemType TORSO
@@ -4032,6 +4058,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{5F2B415CB6402454}" {
        m_sEntityPrefab "{59671155DDBAD871}Prefabs/Characters/Uniforms/Crye_Shirt/Jacket_Crye_Combat_Shirt_M81.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5DEE383AAE88D666}" {
          m_eItemType TORSO
@@ -4041,6 +4068,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{61930045FC542DD2}" {
        m_sEntityPrefab "{838CD1BD139E3451}Prefabs/Characters/Uniforms/Crye_Shirt/Jacket_Crye_Combat_Shirt_MARPAT_Desert.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5DEE383AAE88D666}" {
          m_eItemType TORSO
@@ -4050,6 +4078,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{60CB318DEFF927F1}" {
        m_sEntityPrefab "{0518C70D4EFE075A}Prefabs/Characters/Uniforms/Velocity_shirt/velocity_shirt_brown.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5DEE383AAE88D666}" {
          m_eItemType TORSO
@@ -4068,6 +4097,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{60E2EE6BC2EA326B}" {
        m_sEntityPrefab "{675670B805DAEE53}Prefabs/Characters/Uniforms/Velocity_shirt/velocity_shirt_multicam.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{60DF364BD8FDAB58}" {
          m_eItemType TORSO
@@ -4077,6 +4107,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{616506BFFF400DD6}" {
        m_sEntityPrefab "{0FF296D70C52D89F}Prefabs/Characters/Uniforms/LongSleeve_Shirts/Hoodie_RHS_Shirt_multicam.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{60DF364BD8FDAB58}" {
          m_eItemType TORSO
@@ -4095,6 +4126,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{617005DA37B3D40F}" {
        m_sEntityPrefab "{B63D7CDEA813E130}Prefabs/Characters/Uniforms/LongSleeve_Shirts/Hoodie_RHS_Shirt_Logo.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{60DF364BD8FDAB58}" {
          m_eItemType TORSO
@@ -4122,6 +4154,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{5F24F97E82D54587}" {
        m_sEntityPrefab "{0417F658F2723A30}Prefabs/Characters/Uniforms/BDU_Pants/BDU_PANTS_MARPAT.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5D4A8E6F2C97446A}" {
          m_eItemType LEGS
@@ -4131,6 +4164,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{5F24F97E9D69A255}" {
        m_sEntityPrefab "{512DE5A159E82012}Prefabs/Characters/Uniforms/BDU_Pants/BDU_PANTS_MC.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5D4A8E6F2C97446A}" {
          m_eItemType LEGS
@@ -4140,6 +4174,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{5F32FC7B9349D1AE}" {
        m_sEntityPrefab "{922F62F22B253571}Prefabs/Characters/Uniforms/BDU_Pants/BDU_PANTS_M81.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5D4A8E6F2C97446A}" {
          m_eItemType LEGS
@@ -4149,6 +4184,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{5F24F97E9C5BC785}" {
        m_sEntityPrefab "{54F4BE2F9CA75DAD}Prefabs/Characters/Uniforms/Tactical_Pants/Tactical_Pants_MC.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5D4A8E6F2C97446A}" {
          m_eItemType LEGS
@@ -4158,6 +4194,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{5F24F97E9F17FE11}" {
        m_sEntityPrefab "{DD6750AD7E2ECC61}Prefabs/Characters/Uniforms/Tactical_Pants/Tactical_Pants_MARPAT.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5D4A8E6F2C97446A}" {
          m_eItemType LEGS
@@ -4167,6 +4204,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{5F32FC7B98D9E19E}" {
        m_sEntityPrefab "{40B76B99C3F0503D}Prefabs/Characters/Uniforms/Tactical_Pants/Tactical_Pants_M81.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5D4A8E6F2C97446A}" {
          m_eItemType LEGS
@@ -4176,6 +4214,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{608F327026DEC138}" {
        m_sEntityPrefab "{4F860E576E2D4E28}Prefabs/Characters/Uniforms/Crye_Pants/crye_pants_m81.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5D4A8E6F2C97446A}" {
          m_eItemType LEGS
@@ -4185,6 +4224,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{608F3270219E13C3}" {
        m_sEntityPrefab "{7DF25380BEFEA3A0}Prefabs/Characters/Uniforms/Crye_Pants/crye_pants_marpat.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5D4A8E6F2C97446A}" {
          m_eItemType LEGS
@@ -4194,6 +4234,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{6146FD977494A5F0}" {
        m_sEntityPrefab "{5B2078D4EAA62DA1}Prefabs/Characters/Uniforms/Crye_Pants/crye_pants_AOR2.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5D4A8E6F2C97446A}" {
          m_eItemType LEGS
@@ -4203,6 +4244,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{609137212CBFBCFB}" {
        m_sEntityPrefab "{2FDEBA2FF1B7759E}Prefabs/Characters/Uniforms/Crye_Pants/crye_pants_mc.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5D4A8E6F2C97446A}" {
          m_eItemType LEGS
@@ -4212,6 +4254,7 @@ SCR_Faction : "{E7B7EA4823DD81F0}Configs/Factions/BLUFOR.conf" {
       }
       SCR_EntityCatalogInventoryItem "{608F3270204D6E75}" {
        m_sEntityPrefab "{EF7EF760AEBBED14}Prefabs/Characters/Uniforms/Crye_Pants/crye_pants_marpat_desert.et"
+       m_bEnabled 0
        m_aEntityDataList {
         SCR_ArsenalItem "{5D4A8E6F2C97446A}" {
          m_eItemType LEGS
