--- a/Configs/Factions/SampleFactionREDFOR.conf
+++ b/Configs/Factions/SampleFactionREDFOR.conf
@@ -4331,6 +4331,8 @@ SCR_Faction : "{B122E3B10BB3404B}Configs/Factions/OPFOR.conf" {
       SCR_EntityCatalogInventoryItem "{61FB5AC9915B86BD}" {
        m_sEntityPrefab "{23A15812C40D34C2}Prefabs/Characters/Uniforms/Jacket_Denim_01/Jacket_Denim_01_strippedShirt_dirty.et"
       }
+      SCR_EntityCatalogInventoryItem "{61FEE796771C90FE}" {
+      }
      }
     }
    }
