feat: add vehicles and things

--- a/Configs/EntityCatalog/SampleFactionBLUFOR/SampleFactionBLUFOR_Vehicles.conf
+++ b/Configs/EntityCatalog/SampleFactionBLUFOR/SampleFactionBLUFOR_Vehicles.conf
@@ -4,55 +4,79 @@ SCR_EntityCatalogMultiList {
   SCR_EntityCatalogEntry "{5C54F92F5446F5E6}" {
    m_sEntityPrefab "{4BAD8537F2120E79}Prefabs/Vehicles/Wheeled/UAZ469/UAZ469_SampleFactionBLUFOR.et"
    m_aEntityDataList {
-    SCR_EntityCatalogSpawnerData "{5C66710E8BF856D0}" {
-     m_UiInfo SCR_UIInfo "{5CC6AA03917BF94B}" {
-      Name "#AR-Vehicle_UAZ469_Name-UC"
-     }
-     m_eSlotTypes 56
+    SCR_EntityCatalogEditorData "{61FF31A7EA67B699}" {
+     m_eValidEditorModes 33
+    }
+    SCR_EntityCatalogSpawnerData "{61FF31A7ED5739F4}" {
+     m_eSlotTypes VEHICLE_SMALL
     }
    }
   }
   SCR_EntityCatalogEntry "{5C54F92F54200650}" {
    m_sEntityPrefab "{C012BB3488BEA0C2}Prefabs/Vehicles/Wheeled/BTR70/BTR70.et"
    m_aEntityDataList {
-    SCR_EntityCatalogSpawnerData "{5C66710EFF62DEF8}" {
-     m_UiInfo SCR_UIInfo "{5CC6AA039963FD37}" {
-      Name "#AR-Vehicle_BTR70_Name-UC"
-     }
-     m_eSlotTypes 48
+    SCR_EntityCatalogEditorData "{61FF31A62B27E7A5}" {
+     m_eValidEditorModes 33
+    }
+    SCR_EntityCatalogSpawnerData "{61FF31A76B534B02}" {
+     m_eSlotTypes VEHICLE_LARGE
     }
    }
   }
   SCR_EntityCatalogEntry "{5C54F92F5416B33D}" {
-   m_sEntityPrefab "{758DCB4987DA9F4D}Prefabs/Vehicles/Wheeled/Ural4320/Ural4320_SampleFactionBLUFOR.et"
+   m_sEntityPrefab "{758DCB4987DA9F4D}Prefabs/Vehicles/Wheeled/Ural4320/BLUFOR/Ural4320_SampleFactionBLUFOR.et"
+   m_aEntityDataList {
+    SCR_EntityCatalogEditorData "{61FF31A7423DC305}" {
+     m_eValidEditorModes 33
+    }
+    SCR_EntityCatalogSpawnerData "{61FF31A747E64E3A}" {
+     m_eSlotTypes VEHICLE_LARGE
+    }
+   }
   }
   SCR_EntityCatalogEntry "{5C54F92F540A16D3}" {
-   m_sEntityPrefab "{16C1F16C9B053801}Prefabs/Vehicles/Wheeled/Ural4320/Ural4320_transport.et"
+   m_sEntityPrefab "{07CC8B9FD86D78AD}Prefabs/Vehicles/Wheeled/Ural4320/BLUFOR/Ural4320_transport_SampleFactionBLUFOR.et"
    m_aEntityDataList {
-    SCR_EntityCatalogSpawnerData "{5C66710EDC70CF9B}" {
-     m_UiInfo SCR_UIInfo "{5CC6AA0381621FF0}" {
-      Name "#AR-Vehicle_Ural4320_Transport_Name-UC"
-     }
-     m_eSlotTypes 48
+    SCR_EntityCatalogEditorData "{61FF31A757225559}" {
+     m_eValidEditorModes 33
+    }
+    SCR_EntityCatalogSpawnerData "{61FF31A756E5617A}" {
+     m_eSlotTypes VEHICLE_LARGE
     }
    }
   }
   SCR_EntityCatalogEntry "{5C54F92F54E036C8}" {
-   m_sEntityPrefab "{D9B91FAB817A6033}Prefabs/Vehicles/Wheeled/Ural4320/Ural4320_transport_covered.et"
+   m_sEntityPrefab "{CCF605938CED6D17}Prefabs/Vehicles/Wheeled/Ural4320/BLUFOR/Ural4320_transport_covered_SampleFactionBLUFOR.et"
    m_aEntityDataList {
-    SCR_EntityCatalogSpawnerData "{5C66710D32EEAB25}" {
-     m_UiInfo SCR_UIInfo "{5D1864FEB6009CFD}" {
-      Name "#AR-Vehicle_Ural4320_Transport_Covered_Name-UC"
-     }
-     m_eSlotTypes 48
+    SCR_EntityCatalogEditorData "{61FF31A75F47EA4F}" {
+     m_eValidEditorModes 33
+    }
+    SCR_EntityCatalogSpawnerData "{61FF31A75E29E402}" {
+     m_eSlotTypes VEHICLE_LARGE
     }
    }
   }
   SCR_EntityCatalogEntry "{5C54F92F4674F967}" {
-   m_sEntityPrefab "{4C81D7ED8F8C0D87}Prefabs/Vehicles/Wheeled/Ural4320/Ural4320_tanker.et"
+   m_sEntityPrefab "{80A580986CF3BDC0}Prefabs/Vehicles/Wheeled/Ural4320/BLUFOR/Ural4320_tanker_SampleFactionBLUFOR.et"
+   m_aEntityDataList {
+    SCR_EntityCatalogEditorData "{61FF31A72B7282AF}" {
+     m_eValidEditorModes 33
+    }
+    SCR_EntityCatalogSpawnerData "{61FF31A72A08A859}" {
+     m_eSlotTypes VEHICLE_LARGE
+    }
+   }
   }
   SCR_EntityCatalogEntry "{5C54F92F466216D7}" {
-   m_sEntityPrefab "{1BABF6B33DA0AEB6}Prefabs/Vehicles/Wheeled/Ural4320/Ural4320_command.et"
+   m_sEntityPrefab "{AE92735550BC0AE7}Prefabs/Vehicles/Wheeled/Ural4320/BLUFOR/Ural4320_command_SampleFactionBLUFOR.et"
+   m_aEntityDataList {
+    SCR_EntityCatalogEditorData "{61FF31A733051B9B}" {
+     m_eValidEditorModes 33
+    }
+    SCR_EntityCatalogSpawnerData "{61FF31A7324BAB5C}" {
+     m_eSlotTypes VEHICLE_LARGE
+    }
+   }
   }
  }
  m_aMultiLists {
