--- a/Configs/EntityCatalog/SampleFactionREDFOR/SampleFactionREDFOR_Vehicles.conf
+++ b/Configs/EntityCatalog/SampleFactionREDFOR/SampleFactionREDFOR_Vehicles.conf
@@ -4,62 +4,68 @@ SCR_EntityCatalogMultiList {
   SCR_EntityCatalogEntry "{5C54F92F5446F5E6}" {
    m_sEntityPrefab "{AF946468919822C9}Prefabs/Vehicles/Wheeled/UAZ469/UAZ469_SampleFactionREDFOR.et"
    m_aEntityDataList {
-    SCR_EntityCatalogSpawnerData "{5C66710E8BF856D0}" {
-     m_UiInfo SCR_UIInfo "{5CC6AA03917BF94B}" {
-      Name "#AR-Vehicle_UAZ469_Name-UC"
-     }
-     m_eSlotTypes 56
-     m_iSupplyCost 100
+    SCR_EntityCatalogEditorData "{61FF31B8D4F42C7E}" {
+     m_eValidEditorModes 33
     }
-   }
-  }
-  SCR_EntityCatalogEntry "{5C54F92F54200650}" {
-   m_sEntityPrefab "{C012BB3488BEA0C2}Prefabs/Vehicles/Wheeled/BTR70/BTR70.et"
-   m_aEntityDataList {
-    SCR_EntityCatalogSpawnerData "{5C66710EFF62DEF8}" {
-     m_UiInfo SCR_UIInfo "{5CC6AA039963FD37}" {
-      Name "#AR-Vehicle_BTR70_Name-UC"
-     }
-     m_eSlotTypes 48
-     m_eMinimumRequiredRank SERGEANT
-     m_iSupplyCost 900
+    SCR_EntityCatalogSpawnerData "{61FF31B8D7C7D913}" {
+     m_eSlotTypes VEHICLE_SMALL
     }
    }
   }
   SCR_EntityCatalogEntry "{5C54F92F5416B33D}" {
-   m_sEntityPrefab "{9DD0746FA8A2EE58}Prefabs/Vehicles/Wheeled/Ural4320/Ural4320_SampleFactionREDFOR.et"
+   m_sEntityPrefab "{9DD0746FA8A2EE58}Prefabs/Vehicles/Wheeled/Ural4320/REDFOR/Ural4320_SampleFactionREDFOR.et"
+   m_aEntityDataList {
+    SCR_EntityCatalogEditorData "{61FF31B8A9F5BEE3}" {
+     m_eValidEditorModes 33
+    }
+    SCR_EntityCatalogSpawnerData "{61FF31B8A884E2A5}" {
+     m_eSlotTypes VEHICLE_LARGE
+    }
+   }
   }
   SCR_EntityCatalogEntry "{5C54F92F540A16D3}" {
-   m_sEntityPrefab "{16C1F16C9B053801}Prefabs/Vehicles/Wheeled/Ural4320/Ural4320_transport.et"
+   m_sEntityPrefab "{DAFAFC600205CB1A}Prefabs/Vehicles/Wheeled/Ural4320/REDFOR/Ural4320_transport_SampleFactionREDFOR.et"
    m_aEntityDataList {
-    SCR_EntityCatalogSpawnerData "{5C66710EDC70CF9B}" {
-     m_UiInfo SCR_UIInfo "{5CC6AA0381621FF0}" {
-      Name "#AR-Vehicle_Ural4320_Transport_Name-UC"
-     }
-     m_eSlotTypes 48
-     m_eMinimumRequiredRank CORPORAL
-     m_iSupplyCost 200
+    SCR_EntityCatalogEditorData "{61FF31B8B37335B3}" {
+     m_eValidEditorModes 33
+    }
+    SCR_EntityCatalogSpawnerData "{61FF31B8B2257CE0}" {
+     m_eSlotTypes VEHICLE_LARGE
     }
    }
   }
   SCR_EntityCatalogEntry "{5C54F92F54E036C8}" {
-   m_sEntityPrefab "{D9B91FAB817A6033}Prefabs/Vehicles/Wheeled/Ural4320/Ural4320_transport_covered.et"
+   m_sEntityPrefab "{11E203D1743130CC}Prefabs/Vehicles/Wheeled/Ural4320/REDFOR/Ural4320_transport_covered_SampleFactionREDFOR.et"
    m_aEntityDataList {
-    SCR_EntityCatalogSpawnerData "{5C66710D32EEAB25}" {
-     m_UiInfo SCR_UIInfo "{5D1864FEB6009CFD}" {
-      Name "#AR-Vehicle_Ural4320_Transport_Covered_Name-UC"
-     }
-     m_eSlotTypes 48
-     m_eMinimumRequiredRank CORPORAL
-     m_iSupplyCost 200
+    SCR_EntityCatalogEditorData "{61FF31B8BFEB2FC9}" {
+     m_eValidEditorModes 33
+    }
+    SCR_EntityCatalogSpawnerData "{61FF31B8BE932DE8}" {
+     m_eSlotTypes VEHICLE_LARGE
     }
    }
   }
   SCR_EntityCatalogEntry "{5C54F92F4674F967}" {
-   m_sEntityPrefab "{4C81D7ED8F8C0D87}Prefabs/Vehicles/Wheeled/Ural4320/Ural4320_tanker.et"
+   m_sEntityPrefab "{16EFC63C7435D727}Prefabs/Vehicles/Wheeled/Ural4320/REDFOR/Ural4320_tanker_SampleFactionREDFOR.et.et"
+   m_aEntityDataList {
+    SCR_EntityCatalogEditorData "{61FF31B884C1F8E9}" {
+     m_eValidEditorModes 33
+    }
+    SCR_EntityCatalogSpawnerData "{61FF31B8870E71F1}" {
+     m_eSlotTypes VEHICLE_LARGE
+    }
+   }
   }
   SCR_EntityCatalogEntry "{5C54F92F466216D7}" {
-   m_sEntityPrefab "{1BABF6B33DA0AEB6}Prefabs/Vehicles/Wheeled/Ural4320/Ural4320_command.et"
+   m_sEntityPrefab "{58E1D7267C39196B}Prefabs/Vehicles/Wheeled/Ural4320/REDFOR/Ural4320_command_SampleFactionREDFOR.et"
+   m_aEntityDataList {
+    SCR_EntityCatalogEditorData "{61FF31B88F18DCFB}" {
+     m_eValidEditorModes 33
+    }
+    SCR_EntityCatalogSpawnerData "{61FF31B88E6A3DC6}" {
+     m_eSlotTypes VEHICLE_LARGE
+    }
+   }
   }
  }
  m_aMultiLists {
@@ -74,8 +80,6 @@ SCR_EntityCatalogMultiList {
         Name "#AR-Vehicle_MobileAssembly_Name-UC"
        }
        m_eSlotTypes 48
-       m_eMinimumRequiredRank SERGEANT
-       m_iSupplyCost 1000
       }
      }
     }
@@ -87,7 +91,6 @@ SCR_EntityCatalogMultiList {
         Name "#AR-Vehicle_SupplyTruck_Name-UC"
        }
        m_eSlotTypes 48
-       m_iSupplyCost 150
       }
      }
     }
