--- a/Configs/Factions/SampleFactionBLUFOR_Campaign.conf
+++ b/Configs/Factions/SampleFactionBLUFOR_Campaign.conf
@@ -1,28 +1,9 @@
 SCR_CampaignFaction : "{2F1CD67B16BC0567}Configs/Factions/SampleFactionBLUFOR.conf" {
+ FactionKey "BOPE"
  UIInfo SCR_FactionUIInfo "{5928CC2BF0D1B521}" {
   Name "B.O.P.E."
  }
- m_aEntityCatalogs {
-  SCR_EntityCatalogMultiList "{5C9E82F29B327997}" {
-   m_aEntityEntryList {
-    SCR_EntityCatalogEntry "{5D23482664F150D9}" {
-     m_aEntityDataList {
-      SCR_EntityCatalogSpawnerData "{5D2473212D8AA734}" {
-       m_bEnabled 0
-      }
-     }
-    }
-    SCR_EntityCatalogEntry "{5E48B2F63A087FE5}" {
-     m_sEntityPrefab "{9CB496688A3BCC3E}Prefabs/MP/Campaign/Assets/CampaignMobileAssemblyWest.et"
-     m_aEntityDataList {
-      SCR_EntityCatalogSpawnerData "{5E48B2F646813529}" {
-       m_eSlotTypes VEHICLE_MEDIUM
-      }
-     }
-    }
-   }
-  }
- }
+ m_FactionLabel FACTION_BLUFOR
  m_DefendersGroupPrefab "{D4A1576757665D02}Prefabs/Groups/Campaign/Group_US_Defenders.et"
  m_aStartingVehicles {
   "{3F2AA823B6C65E1E}Prefabs/Vehicles/Wheeled/M923A1/M923A1_transport_MERDC.et"
