--- a/Configs/Factions/SampleFactionREDFOR.conf
+++ b/Configs/Factions/SampleFactionREDFOR.conf
@@ -1,5 +1,5 @@
 SCR_Faction : "{B122E3B10BB3404B}Configs/Factions/OPFOR.conf" {
- FactionKey "CV"
+ FactionKey "USSR"
  FactionColor 0.947 0.067 0.067 1
  UIInfo SCR_FactionUIInfo "{569AB9EFA7D2161D}" {
   Name "Comando Vermelho"
@@ -10,7 +10,7 @@ SCR_Faction : "{B122E3B10BB3404B}Configs/Factions/OPFOR.conf" {
  }
  m_sFactionFlag "{9483D1EDF710FA9D}Assets/Factions/flag-cv.edds"
  m_FactionFlagMaterial "{362AC46447DBE58B}Assets/Props/Fabric/Flags/Data/Flag_1_2_Red.emat"
- m_FactionLabel FACTION_REDFOR
+ m_FactionLabel FACTION_USSR
  m_aFriendlyFactionsIds {
   "USSR"
  }
