--- a/Configs/Factions/SampleFactionREDFOR_Campaign.conf
+++ b/Configs/Factions/SampleFactionREDFOR_Campaign.conf
@@ -1,5 +1,6 @@
 SCR_CampaignFaction : "{C93D9F19E9F3CD97}Configs/Factions/SampleFactionREDFOR.conf" {
  FactionKey "CV"
+ m_FactionLabel FACTION_REDFOR
  m_aEntityCatalogs {
   SCR_EntityCatalogMultiList "{5D32E091B0B3AE63}" {
    m_aMultiLists {
